# ros2-TIAGo-followMe

./: README.md  output.avi
Obstacle_Avoidance_ROS2/: README.md
Obstacle_Avoidance_ROS2/cpp_obstacle_avoidance/: CMakeLists.txt  package.xml
Obstacle_Avoidance_ROS2/cpp_obstacle_avoidance/include/: turtlebot3_drive.hpp
Obstacle_Avoidance_ROS2/cpp_obstacle_avoidance/src/: cpp_obstacle_avoidance.cpp
Obstacle_Avoidance_ROS2/py_obstacle_avoidance/: package.xml  setup.cfg  setup.py
Obstacle_Avoidance_ROS2/py_obstacle_avoidance/launch/: controller.launch.py
Obstacle_Avoidance_ROS2/py_obstacle_avoidance/py_obstacle_avoidance/: robot_controller.py  robot_estimator.py
cv_basics/: package.xml  setup.py
cv_basics/cv_basics/: webcam_sub.py
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: ProcessPoint.srv  SendPoint.srv
tiago_nodes/: package.xml  setup.cfg  setup.py
tiago_nodes/launch/: tiago_launch.py
tiago_nodes/tiago_nodes/: controller.py  depth_finder.py  pid_controller.py  utility_functions.py
tiagosim/: package.xml  setup.cfg  setup.py
tiagosim/controllers/my_controller_signora/: my_controller_signora.py
tiagosim/launch/: my_robot_launch.py
tiagosim/resource/: ros2_control.yml  tiago_webots.urdf
tiagosim/worlds/: .world2.wbproj  default.wbt  world2.wbt
